--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="gift-container" id="gift-container">
-        <img src="present.png" alt="A special gift for you" id="present">
+        <img src="Present.png" alt="A special gift for you" id="present">
         <p class="gift-text">A gift for you ❤️</p>
     </div>
     <div class="message-container hidden" id="message">
